Endpoint para recuperar cedears por ticker, se agrega conexion string a la BD local

--- a/CalculadoraCedears.Api/appsettings.Development.json
+++ b/CalculadoraCedears.Api/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "JwtOptions": {
     "Secret": "secret-strong-key" //Important, save the secret key in services likes Key Vault (Azure), KMS (AWS), Cloud KMS (GCP), etc.
+  },
+  "SQL": {
+    "ConnectionStrings": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=CalculadoraCedears;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False"
   }
 }
