--- a/CalculadoraCedears.Desktop/package.json
+++ b/CalculadoraCedears.Desktop/package.json
@@ -10,11 +10,11 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@radix-ui/react-collapsible": "^1.1.4",    
+    "@radix-ui/react-collapsible": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.4",
     "@tailwindcss/vite": "^4.1.4",
-    "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-http": "^2.4.3",
     "@tauri-apps/plugin-opener": "^2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
