--- a/CalculadoraCedears.Desktop/package.json
+++ b/CalculadoraCedears.Desktop/package.json
@@ -40,6 +40,7 @@
     "@types/node": "^22.14.1",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.4",
     "typescript": "~5.6.2",
     "vite": "^6.0.3"
