--- a/CalculadoraCedears.Desktop/package.json
+++ b/CalculadoraCedears.Desktop/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@fabianlars/tauri-plugin-oauth": "^2.0.0",
     "@radix-ui/react-collapsible": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-label": "^2.1.4",
@@ -21,6 +22,9 @@
     "@tauri-apps/plugin-http": "^2.4.3",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-websocket": "^2.3.0",
+    "@tauri-apps/plugin-shell": "^2.2.1",
+    "@tauri-apps/api": "^2.5.0",
+    "@tauri-apps/plugin-store": "^2.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
