--- a/CalculadoraCedears.Desktop/src-tauri/Cargo.toml
+++ b/CalculadoraCedears.Desktop/src-tauri/Cargo.toml
@@ -20,8 +20,13 @@ tauri-build = { version = "2", features = [] }
 [dependencies]
 tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
+reqwest = { version = "0.11", features = ["json", "blocking"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-http = { version = "2.0", features = ["dangerous-settings"] }
 tauri-plugin-websocket = "2"
-
+tauri-plugin-oauth = "2"
+tauri-plugin-store = "2.0.0"
+tauri-plugin-shell = "2"
+url = "2.4"
+rand = "0.8"
