--- a/CalculadoraCedears.Desktop/package.json
+++ b/CalculadoraCedears.Desktop/package.json
@@ -10,21 +10,23 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.0.1",
     "@fabianlars/tauri-plugin-oauth": "^2.0.0",
+    "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.10",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.4",
     "@tailwindcss/vite": "^4.1.4",
+    "@tauri-apps/api": "^2.5.0",
     "@tauri-apps/plugin-http": "^2.4.3",
     "@tauri-apps/plugin-opener": "^2",
-    "@tauri-apps/plugin-websocket": "^2.3.0",
     "@tauri-apps/plugin-shell": "^2.2.1",
-    "@tauri-apps/api": "^2.5.0",
     "@tauri-apps/plugin-store": "^2.2.0",
+    "@tauri-apps/plugin-websocket": "^2.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
