--- a/CalculadoraCedears.Desktop/package.json
+++ b/CalculadoraCedears.Desktop/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "calculadoracedearsdesktop",
+  "name": "calculadoracedear",
   "private": true,
   "version": "0.1.0",
   "type": "module",
