--- a/CalculadoraCedears.Desktop/src-tauri/Cargo.toml
+++ b/CalculadoraCedears.Desktop/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "calculadoracedearsdesktop"
-version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
+name = "CalculadoraCedears"
+version = "1.0.0"
+description = "Calculadora de Cedears"
+authors = ["Leonardo Faggiani"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,7 +11,7 @@ edition = "2021"
 # The `_lib` suffix may seem redundant but it is necessary
 # to make the lib name unique and wouldn't conflict with the bin name.
 # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
-name = "calculadoracedearsdesktop_lib"
+name = "calculadoracedears_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
@@ -30,3 +30,4 @@ tauri-plugin-store = "2.0.0"
 tauri-plugin-shell = "2"
 url = "2.4"
 rand = "0.8"
+tokio = { version = "1.0", features = ["full"] }
