--- a/CalculadoraCedears.Desktop/src-tauri/Cargo.toml
+++ b/CalculadoraCedears.Desktop/src-tauri/Cargo.toml
@@ -20,7 +20,7 @@ tauri-build = { version = "2", features = [] }
 [dependencies]
 tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
-reqwest = { version = "0.11", features = ["json", "blocking"] }
+reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-http = { version = "2.0", features = ["dangerous-settings"] }
