--- a/CalculadoraCedears.Desktop/src-tauri/Cargo.toml
+++ b/CalculadoraCedears.Desktop/src-tauri/Cargo.toml
@@ -31,3 +31,6 @@ tauri-plugin-shell = "2"
 url = "2.4"
 rand = "0.8"
 tokio = { version = "1.0", features = ["full"] }
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-updater = "2"
