--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -33,6 +33,7 @@ jobs:
 
       - name: install frontend dependencies
         run: npm install
+        working-directory: CalculadoraCedears.Desktop
 
       - uses: tauri-apps/tauri-action@v0
         env:
@@ -40,6 +41,7 @@ jobs:
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         with:
+          projectPath: CalculadoraCedears.Desktop
           tagName: app-v__VERSION__ # __VERSION__ se reemplaza por la versión de tu tauri.conf.json
           releaseName: 'App v__VERSION__'
           releaseBody: 'See the assets to download this version and install.'
