update tauri action branch

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -35,14 +35,14 @@ jobs:
         run: npm install
         working-directory: CalculadoraCedears.Desktop
 
-      - uses: tauri-apps/tauri-action@v0
+      - uses: tauri-apps/tauri-action@dev
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         with:
           projectPath: CalculadoraCedears.Desktop
-          tagName: app-v__VERSION__ # __VERSION__ se reemplaza por la versión de tu tauri.conf.json
+          tagName: Release-v__VERSION__ # __VERSION__ se reemplaza por la versión de tu tauri.conf.json
           releaseName: 'CalculadoraCedears v__VERSION__'
           releaseBody: 'Vea los recursos para descargar e instalarla la aplicación.'
           includeUpdaterJson: true 
