--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -24,6 +24,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Verificar si TAURI_SIGNING_PRIVATE_KEY existe
+        shell: bash
         run: |
             if [ -z "$TAURI_SIGNING_PRIVATE_KEY" ]; then
                 echo "❌ No se encontró TAURI_SIGNING_PRIVATE_KEY"
@@ -32,7 +33,8 @@ jobs:
                 echo "✅ TAURI_SIGNING_PRIVATE_KEY está presente"
             fi
 
-      - name: Verificar si TAURI_SIGNING_PRIVATE_KEY_PASSWORD existe
+      - name: Verificar si TAURI_SIGNING_PRIVATE_KEY_PASSWORD existe.
+        shell: bash
         run: |
             if [ -z "$TAURI_SIGNING_PRIVATE_KEY_PASSWORD" ]; then
                 echo "❌ No se encontró TAURI_SIGNING_PRIVATE_KEY_PASSWORD"
