--- a/CalculadoraCedears.Desktop/src-tauri/oauth_config.json
+++ b/CalculadoraCedears.Desktop/src-tauri/oauth_config.json
@@ -1,7 +1,7 @@
 {
   "google": {
-    "client_id": "client id>",
-    "client_secret": "<client secret>",
+    "client_id": "$GOOGLE_CLIENT_ID",
+    "client_secret": "$GOOGLE_CLIENT_SECRET",
     "auth_url": "https://accounts.google.com/o/oauth2/auth",
     "token_url": "https://oauth2.googleapis.com/token",
     "user_info_url": "https://www.googleapis.com/oauth2/v3/userinfo",
