--- a/CalculadoraCedears.Api/appsettings.Development.json
+++ b/CalculadoraCedears.Api/appsettings.Development.json
@@ -5,8 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "GoogleClient": {
+    "Id": "$GOOGLE_CLIENT_ID"
+  },
   "JwtOptions": {
-    "Secret": "secret-strong-key" //Important, save the secret key in services likes Key Vault (Azure), KMS (AWS), Cloud KMS (GCP), etc.
+    "Secret": "$JWT_SECRET", //Important, save the secret key in services likes Key Vault (Azure), KMS (AWS), Cloud KMS (GCP), etc.
+    "Issuer": "$JWT_ISSUER",
+    "Audience": "$JWT_AUDIENCE",
+    "ExpiryMinutes": 60
   },
   "SQL": {
     "ConnectionStrings": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=CalculadoraCedears;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False"
