--- a/CalculadoraCedears.Desktop/src-tauri/Cargo.toml
+++ b/CalculadoraCedears.Desktop/src-tauri/Cargo.toml
@@ -31,6 +31,7 @@ tauri-plugin-shell = "2"
 url = "2.4"
 rand = "0.8"
 tokio = { version = "1.0", features = ["full"] }
+tauri-plugin-process = "2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-updater = "2"
