Se crea env para local y el secret para utilizar en github action.

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -54,6 +54,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
+          API_BASE_URL: ${{ secrets.API_BASE_URL }}
         with:
           projectPath: CalculadoraCedears.Desktop
           tagName: Release-v__VERSION__ # __VERSION__ se reemplaza por la versión de tu tauri.conf.json
