--- a/CalculadoraCedears.Desktop/package.json
+++ b/CalculadoraCedears.Desktop/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "cross-env API_BASE_URL=https://localhost:7016/api/ tauri dev"
   },
   "dependencies": {
     "@fabianlars/tauri-plugin-oauth": "^2.0.0",
@@ -53,6 +53,7 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "cross-env": "^7.0.3",
     "typescript": "~5.6.2",
     "vite": "^6.3.4"
   }
