--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -61,7 +61,7 @@ jobs:
           releaseName: 'CalculadoraCedears v__VERSION__'
           releaseBody: 'Vea los recursos para descargar e instalarla la aplicación.'
           includeUpdaterJson: true 
-          tauriScript: 'build'
+          tauriScript: 'npm run build'
           releaseDraft: false
           prerelease: false
           args: ${{ matrix.args }}
