--- a/CalculadoraCedears.Desktop/package.json
+++ b/CalculadoraCedears.Desktop/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "cross-env API_BASE_URL=https://localhost:7016/api/ tauri dev"
+    "tauri": "tauri dev"
   },
   "dependencies": {
     "@fabianlars/tauri-plugin-oauth": "^2.0.0",
