--- a/CalculadoraCedears.Desktop/package.json
+++ b/CalculadoraCedears.Desktop/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "@tauri-apps/api": "^2.5.0",
     "@tauri-apps/plugin-http": "^2.4.3",
+    "@tauri-apps/plugin-log": "^2.5.0",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-process": "^2.2.1",
     "@tauri-apps/plugin-shell": "^2.2.1",
@@ -52,7 +53,7 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^4.3.4",    
+    "@vitejs/plugin-react": "^4.3.4",
     "typescript": "~5.6.2",
     "vite": "^6.3.4"
   }
