--- a/CalculadoraCedears.Api/appsettings.Development.json
+++ b/CalculadoraCedears.Api/appsettings.Development.json
@@ -15,6 +15,6 @@
     "ExpiryMinutes": 60
   },
   "SQL": {
-    "ConnectionStrings": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=CalculadoraCedears;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False"
+    "ConnectionStrings": "$SQL_CONNECTION_STRING"
   }
 }
