Se deja el appSettings igual al de dev

--- a/CalculadoraCedears.Api/appsettings.json
+++ b/CalculadoraCedears.Api/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "GoogleClient": {
+    "Id": "$GOOGLE_CLIENT_ID"
+  },
+  "JwtOptions": {
+    "Secret": "$JWT_SECRET",
+    "Issuer": "$JWT_ISSUER",
+    "Audience": "$JWT_AUDIENCE",
+    "ExpiryMinutes": 60
+  },
+  "SQL": {
+    "ConnectionStrings": "$SQL_CONNECTION_STRING"
+  }
 }
