Refactor login, genracion y validaicon de user de google en backend

--- a/CalculadoraCedears.Api/appsettings.Development.json
+++ b/CalculadoraCedears.Api/appsettings.Development.json
@@ -6,6 +6,9 @@
     }
   },
   "GoogleClient": {
+    "AuthTokenUri": "https://oauth2.googleapis.com/token",
+    "Secret": "$GOOGLE_SECRET",
+    "RedirectUri": "$GOOGLE_REDIRECT_URI",
     "Id": "$GOOGLE_CLIENT_ID"
   },
   "JwtOptions": {
