--- a/CalculadoraCedears.Api.Dto/CalculadoraCedears.Api.Dto.csproj
+++ b/CalculadoraCedears.Api.Dto/CalculadoraCedears.Api.Dto.csproj
@@ -5,4 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="4.7.2" />
+  </ItemGroup>
+
 </Project>
