--- a/CalculadoraCedears.Desktop/src-tauri/Cargo.toml
+++ b/CalculadoraCedears.Desktop/src-tauri/Cargo.toml
@@ -21,6 +21,7 @@ tauri-build = { version = "2", features = [] }
 tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
+jsonwebtoken = "9"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-http = { version = "2.0", features = ["dangerous-settings"] }
@@ -30,6 +31,7 @@ tauri-plugin-store = "2.0.0"
 tauri-plugin-shell = "2"
 url = "2.4"
 rand = "0.8"
+base64 = "0.22"
 tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
 tauri-plugin-process = "2"
 tauri-plugin-log = "2"
