--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -43,6 +43,7 @@ jobs:
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
           API_BASE_URL: ${{ secrets.API_BASE_URL }}
+          VITE_WS_BASE_URL: ${{ secrets.WS_BASE_URL }}
         with:
           projectPath: CalculadoraCedears.Desktop
           tagName: Release-${{ github.ref_name }}
